--- a/login.html
+++ b/login.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>This is GangMin's Page</title>
         <body>
-            <a>hihihihi</a>
+            <h1>GangMin Kim</h1>
+            <img src = "https://w.namu.la/s/bb9cfbe410e66a6e3ae86f00a8bd3c263f7512b8f74571e6130a700666e1fc523f43437cfe55fbbd484b0513ab34357ee859af5a9a9ee98ac0753993c6fc5e430370e6264ae0d604d953cc2fc9f199b056cebc18156b46764df656494b2f43d4" alt = "">
+            <br>
+            <div>Hi I'm GangMin Kim</div>
+            <br>
+            <a href="https://www.instagram.com/rkdals03/">instagram</a>
         </body>
     </head>
 </html>
