--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html>
     <head>
         <title>This is GangMin's Page</title>
-        <body>
-            <h1>GangMin Kim</h1>
-            <img src = "https://w.namu.la/s/bb9cfbe410e66a6e3ae86f00a8bd3c263f7512b8f74571e6130a700666e1fc523f43437cfe55fbbd484b0513ab34357ee859af5a9a9ee98ac0753993c6fc5e430370e6264ae0d604d953cc2fc9f199b056cebc18156b46764df656494b2f43d4" alt = "">
-            <br>
-            <div>Hi I'm GangMin Kim</div>
-            <br>
-            <a href="https://www.instagram.com/rkdals03/">instagram</a>
-        </body>
+        <style>
+            .name {
+                color:white;
+            }
+            .text {
+                color:white;
+            }
+            .insta {
+                color:#FA80CE;
+                text-decoration-line: none;
+            }
+            .insta:hover{
+                color:aquamarine;
+                text-decoration: none;
+            }
+        </style>
     </head>
+        <body bgcolor="A05A10">
+            <h1 class = 'name'>GangMin Kim</h1>
+            <img class = 'profile' src = "https://w.namu.la/s/bb9cfbe410e66a6e3ae86f00a8bd3c263f7512b8f74571e6130a700666e1fc523f43437cfe55fbbd484b0513ab34357ee859af5a9a9ee98ac0753993c6fc5e430370e6264ae0d604d953cc2fc9f199b056cebc18156b46764df656494b2f43d4" alt = "">
+            <br>
+            <div class = 'text'>Hi I'm GangMin Kim</div>
+            <div class = 'text'>Fucking World!</div>
+            <div class = 'text'>Fucking Korea!</div>
+            <br>
+            <a class = 'insta'href="https://www.instagram.com/rkdals03/">instagram</a>
+        </body>
 </html>
